--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ v0.7.4
 * performance improvement for partitionBundle,character-method
 * a new Labels class and label method for generating test data
 * bug removed for partitionBundle,character-class, and performance improved
+* Improved explanation of the installation procedure for Mac in the package vignette
 
 v0.7.3
 * new installed.corpora() convenience function to list all data packages with corpora
