--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ v0.7.5
 * rework and improved documentation for decode- and encode-methods
 * new functions copy.corpus and rename.corpus
 * as.DocumentTermMatrix-method checks for strucs with value -1 
+* improved as.speeches-method: reordering of speeches, default values
+* blapply-method: verbose output will be suppressed of progress is TRUE
 
 v0.7.4
 * applying stoplists and positivelists working again for context-method
