--- a/README.Rmd
+++ b/README.Rmd
@@ -1,45 +1,66 @@
+---
+output: github_document
+---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
-[![License](https://img.shields.io/aur/license/yaourt.svg)](http://www.gnu.org/licenses/gpl-3.0.html) [![CRAN\_Status\_Badge](http://www.r-pkg.org/badges/version/polmineR)](https://cran.r-project.org/package=polmineR) [![Downloads](http://cranlogs.r-pkg.org/badges/polmineR)](https://cran.r-project.org/package=polmineR) [![Travis-CI Build Status](https://api.travis-ci.org/PolMine/polmineR.svg?branch=master)](https://travis-ci.org/PolMine/polmineR) [![codecov](https://codecov.io/gh/PolMine/polmineR/branch/master/graph/badge.svg)](https://codecov.io/gh/PolMine/polmineR/branch/master)
 
-polmineR
-========
+[![License](https://img.shields.io/aur/license/yaourt.svg)](http://www.gnu.org/licenses/gpl-3.0.html)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/polmineR)](https://cran.r-project.org/package=polmineR)
+[![Downloads](http://cranlogs.r-pkg.org/badges/polmineR)](https://cran.r-project.org/package=polmineR)
+[![Travis-CI Build Status](https://api.travis-ci.org/PolMine/polmineR.svg?branch=master)](https://travis-ci.org/PolMine/polmineR)
+[![codecov](https://codecov.io/gh/PolMine/polmineR/branch/master/graph/badge.svg)](https://codecov.io/gh/PolMine/polmineR/branch/master)
 
-*Purpose*: The focus of the package 'polmineR' is the interactive analysis of corpora using R. Core objectives for the development of the package are performance, usability, and a modular design.
 
-*Aims*: Key aims for developing the package are: - To keep the original text accessible. A seamless integration of qualitative and quantitative steps in corpus analysis supports validation, based on inspecting the text behind the numbers. - To provide a library with standard tasks. It is an open source platform that will make text mining more productive, avoiding prohibitive costs to reimplement basics, or to run many lines of code to perform a basic tasks. - To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support contrastive/comparative research. - To offer performance for users with an ordinary infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed by using the Corpus Workbench (CWB). - To support sharing consolidated and documented data, following the ideas of reproducible research.
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
 
-*Backend*: The polmineR relies on the *Open Corpus Workbench* (CWB) as a backend and uses the *rcqp* package as an interface. The CWB is particularly efficient for storing large corpora and offers a powerful language for querying corpora, the Corpus Query Processor (CQP). The architecture may be overengineered if you work with smaller corpora. It is meant to make working with larger corpora efficient, both locally, or on a server.
+# polmineR
+
+*Purpose*:  The focus of the package 'polmineR' is the interactive analysis of corpora using R. Core objectives for the development of the package are performance, usability, and a modular design.
+
+*Aims*: Key aims for developing the package are:
+- To keep the original text accessible. A seamless integration of qualitative and quantitative steps in corpus analysis supports validation, based on inspecting the text behind the numbers.
+- To provide a library with standard tasks.  It is  an open source platform that will make text mining more productive, avoiding prohibitive costs to reimplement basics, or to run many lines of code to perform a basic tasks.
+- To create a package that makes the creation and analysis of subcorpora ('partitions') easy. A particular strength of the package is to support contrastive/comparative research.
+- To offer performance for users with an ordinary infrastructure. The package picks up the idea of a three-tier software design. Corpus data are managed and indexed by using the Corpus Workbench (CWB).
+- To support sharing consolidated and documented data, following the ideas of reproducible research.
+
+*Backend*: The polmineR relies on the _Open Corpus Workbench_ (CWB) as a backend and uses the _rcqp_ package as an interface. The CWB is particularly efficient for storing large corpora and offers a powerful language for querying corpora, the Corpus Query Processor (CQP). The architecture may be overengineered if you work with smaller corpora. It is meant to make working with larger corpora efficient, both locally, or on a server.
 
 *Background*: The polmineR-package was specifically developed to make full use of the XML annotation structure of the corpora created in the PolMine project (see polmine.sowi.uni-due.de). The core PolMine corpora are corpora of plenary protocols. In these corpora, speakers, parties etc. are structurally annotated. The polmineR-package is meant to help making full use of the rich annotation structure.
 
-Core Functions
---------------
+## Core Functions
 
--   *partition*: Set up a partition (i.e. subcorpus);
--   *count*: Count features
--   *dispersion*: Analyse the dispersion of a query across one or two dimensions (absolute and relative frequencies);
--   *cooccurrences*: Analyse the context of a query (including some statistics);
--   *features*: Compare partitions to identify features / keywords (using statistical tests such as chi square).
+- *partition*: Set up a partition (i.e. subcorpus);
+- *count*: Count features
+- *dispersion*: Analyse the dispersion of a query across one or two dimensions (absolute and relative frequencies);
+- *cooccurrences*: Analyse the context of a query (including some statistics);
+- *features*: Compare partitions to identify features / keywords (using statistical tests such as chi square).
 
 [![kwic()](http://polmine.sowi.uni-due.de/gallery/kwic.png)](http://polmine.sowi.uni-due.de/gallery/kwic.png)
 
-Installation
-------------
+
+## Installation
+
 
 ### Windows (32 bit / i386)
 
-At this stage, an easy way to install polmineR is available only for 32bit R. Usually, an R installation will include both 32bit and 64bit R. So if you want to keep things simple, make sure that you work with 32bit version. If you work with RStudio (highly recommended), the menu Tools &gt; Global Options will open a dialogue where you can choose 32bit R.
+At this stage, an easy way to install polmineR is available only for 32bit R. Usually, an R installation will include both 32bit and 64bit R. So if you want to keep things simple, make sure that you work with 32bit version. If you work with RStudio (highly recommended), the menu Tools > Global Options will open a dialogue where you can choose 32bit R.
 
 Before installing polmineR, the package 'rcqp' needs to be installed. In turn, rcqp requires plyr, which should be installed first.
 
-``` r
+```{r, eval = FALSE}
 install.packages("plyr")
 ```
 
 To avoid compiling C code in a package, packages with compiled binaries are very handy. Windows binaries for the rcqp package are not available at CRAN, but can be installed from a repository of packages entertained at the server of the PolMine project:
 
-``` r
+```{r, eval = FALSE}
 install.packages("rcqp", repos = "http://polmine.sowi.uni-due.de/packages", type = "win.binary")
 ```
 
@@ -47,67 +68,68 @@ To explain: Compiling the C code in the rcqp package on a windows machine is not
 
 Before proceeding to install polmineR, we install dependencies that are not installed automatically.
 
-``` r
+```{r, eval = FALSE}
 install.packages(pkgs = c("htmltools", "htmlwidgets", "magrittr", "iterators", "NLP"))
 ```
 
-The latest stable version of polmineR can now be installed from CRAN. Several other packages that polmineR depends on, or that dependencies depend on may be installed automatically.
+The latest stable version of polmineR can now be installed from CRAN. Several other packages that polmineR depends on, or that dependencies depend on may be installed automatically. 
 
-``` r
+```{r, eval = FALSE}
 install.packages("polmineR")
 ```
 
 The development version of the package, which may include the most recent updates and features, can be installed from GitHub. The easiest way to do this is to use a mechanism offered by the package devtools.
 
-``` r
+```{r, eval = FALSE}
 install.packages("devtools")
 devtools::install_github("PolMine/polmineR", ref = "dev")
 ```
 
 The installation may throw warnings. There are three warnings you can ignore at this stage:
 
--   "WARNING: this package has a configure script / It probably needs manual configuration".
--   The environment variable CORPUS\_REGISTRY is not defined.
--   package 'rcqp' is not installed for 'arch = x64'.
+* "WARNING: this package has a configure script / It probably needs manual configuration".
+* The environment variable CORPUS_REGISTRY is not defined.
+* package 'rcqp' is not installed for 'arch = x64'.
 
-The configure script is for Linux/MacOS installation, its sole purpose is to pass tests for uploading the package to CRAN. As mentioned, windows binaries are not yet available for 64bit R at present, so that can be ignored. The environment variable "CORPUS\_REGISTRY" can be set as follows in R:
+The configure script is for Linux/MacOS installation, its sole purpose is to pass tests for uploading the package to CRAN. As mentioned, windows binaries are not yet available for 64bit R at present, so that can be ignored. The environment variable "CORPUS_REGISTRY" can be set as follows in R:
 
-``` r
+```{r, eval = FALSE}
 Sys.setenv(CORPUS_REGISTRY = "C:/PATH/TO/YOUR/REGISTRY")
 ```
 
-To set the environment variable CORPUS\_REGISTRY permanently, see the instructions R offer how to find the file '.Renviron' or '.Renviron.site' when calling the help for the startup process(`?Startup`).
+To set the environment variable CORPUS_REGISTRY permanently, see the instructions R offer how to find the file '.Renviron' or '.Renviron.site' when calling the help for the startup process(`?Startup`).
 
-Two important notes concerning problems with the CORPUS\_REGISTRY environment variable that may cause serious headaches:
+Two important notes concerning problems with the CORPUS_REGISTRY environment variable that may cause serious headaches:
 
--   The path can not be processed, if there is any whitespace in the path pointing to the registry. Whitespace may occur in the user name ("C:/Users/Donald Duck/Documents"), for instance. We do not yet know any workaround to make rcqp/CWB process whitespace. The recommendation is to create a directory at a path without whitespace to keep the registry and the indexed\_corpora (a directory such as "C:/cwb").
+* The path can not be processed, if there is any whitespace in the path pointing to the registry. Whitespace may occur in the user name ("C:/Users/Donald Duck/Documents"), for instance. We do not yet know any workaround to make rcqp/CWB process whitespace. The recommendation is to create a directory at a path without whitespace to keep the registry and the indexed_corpora (a directory such as "C:/cwb").
 
--   If you keep data on another volume than your system files, your R packages etc. (eg. volume 'C:' for system files, and 'D:' for data and user files), make sure to set the working directory (`setwd()`) is set to any directory on the volume with the directory defined via CORPUS\_REGISTRY. CWB/rcqp will assume that the CORPUS\_REGISTRY directory is on the same volume as the current working directory (which can be identified by calling `getwd()`).
+* If you keep data on another volume than your system files, your R packages etc. (eg. volume 'C:' for system files, and 'D:' for data and user files), make sure to set the working directory (`setwd()`) is set to any directory on the volume with the directory defined via CORPUS_REGISTRY. CWB/rcqp will assume that the CORPUS_REGISTRY directory is on the same volume as the current working directory (which can be identified by calling `getwd()`).
 
 Finally: polmineR if optimized for working with RStudio. It you work with 32bit R, you may have to check in the settings of RStudio that it will call 32bit R. To be sure, check the startup message.
 
 If everything works, check whether polmineR can be loaded.
 
-``` r
+```{r, eval = FALSE}
 library(polmineR)
 corpus() # to see corpora available at your system
 ```
+
 
 ### Windows (64 bit / x86)
 
 At this stage, 64 bit support is still experimental. Apart from an installation of 64 bit R, you will need to install Rtools, available [here](https://cran.r-project.org/bin/windows/Rtools/). Rtools is a collection of tools necessary to build and compile R packages on a Windows machine.
 
-To interface to a core C library of the Corpus Workbench (CWB), you will need an installation of a 64 bit AND a 32 bit version of the CWB.
+To interface to a core C library of the Corpus Workbench (CWB), you will need an installation of a 64 bit AND a 32 bit version of the CWB. 
 
-The "official" 32 bit version of the CWB is available [here](https://sourceforge.net/projects/cwb/files/cwb/cwb-3.4-beta/). Installation instructions are available at the [CWB Website](http://cwb.sourceforge.net/beta.php). The 32 bit version should be installed in the directory "C:Files", with admin rights.
+The "official" 32 bit version of the CWB is available [here](https://sourceforge.net/projects/cwb/files/cwb/cwb-3.4-beta/). Installation instructions are available at the [CWB Website](http://cwb.sourceforge.net/beta.php). The 32 bit version should be installed in the directory "C:\Program Files", with admin rights.
 
-The 64 bit version, prepared by Andreas Blaette, is available [here](http://polmine.sowi.uni-due.de/public/?dir=CWB). Install this 64 bit CWB version to "C:Files (x86)". In the unzipped downloaded zip file, you will find a bat file that will do the installation. Take care that you run the file with administrator rights. Without these rights, no files will be copied.
+The 64 bit version, prepared by Andreas Blaette, is available [here](http://polmine.sowi.uni-due.de/public/?dir=CWB). Install this 64 bit CWB version to "C:\Program Files (x86)". In the unzipped downloaded zip file, you will find a bat file that will do the installation. Take care that you run the file with administrator rights. Without these rights, no files will be copied.
 
 The interface to the Corpus Workbench is the package polmineR.Rcpp, [available at GitHub](https://www.github.com/PolMine/polminer.Rcpp). If you use git, you can clone that repository, otherwise, you can download a zip file.
 
 The downloaded zip file needs to be unzipped again. Then, in the directory with the 'polmineR.Rcpp'-directory, run:
 
-``` sh
+```{sh, eval = FALSE}
 R CMD build polmineR.Rcpp
 R CMD INSTALL polmineR.Rcpp_0.1.0.tar.gz
 ```
@@ -118,13 +140,13 @@ One polmineR.Rcpp is installed, proceed with the instructions for installing pol
 
 Finally, you need to make sure that polmineR will interface to CWB indexed corpora using polmineR.Rcpp, and not with rcqp (the default). To set the interface accordingly:
 
-``` r
+```{r, eval = FALSE}
 setCorpusWorkbenchInterface("Rcpp")
 ```
 
 To test whether corpora are available:
 
-``` r
+```{r, eval = FALSE}
 corpus()
 ```
 
@@ -136,16 +158,17 @@ The following instructions for Mac users assume that R is installed on your syst
 
 The latest release of polmineR can be installed from CRAN using the usual `install.packages`-function.
 
-``` r
+```{r mac_install_polmineR_cran, eval = FALSE}
 install.packages("polmineR")
 ```
 
 The development version of *polmineR* can be installed using devtools:
 
-``` r
+```{r, eval = FALSE}
 install.packages("devtools") # unless devtools is already installed
 devtools::install_github("PolMine/polmineR", ref = "dev")
 ```
+
 
 #### Installing 'rcqp'
 
@@ -155,7 +178,7 @@ The default interface of the polmineR package to access CWB indexed corpora is t
 
 The easiest way to get rcqp for Mac is install a precompiled binary that is available at the PolMine server:
 
-``` r
+```{r, eval = FALSE}
 install.packages(
   "rcqp",
   repos = "http://polmine.sowi.uni-due.de/packages",
@@ -169,7 +192,7 @@ If you want to get rcqp from CRAN and/or if you want to to compile the C code yo
 
 First, you will need an installation of Xcode, which you can get it via the Mac App Store. You will also need the Command Line Tools for Xcode. It can be installed from a terminal with:
 
-``` sh
+```{sh, eval = FALSE}
 xcode-select --install
 ```
 
@@ -179,7 +202,7 @@ To compile the C code in the rcqp package, there are system requirements that ne
 
 We recommend to use 'Homebrew'. To install Homebrew, follow the instructions on the [Homebrew Homepage](https://brew.sh/index_de.html). The following commands will install the C libraries the rcqp package relies on:
 
-``` sh
+```{sh, eval = FALSE}
 brew -v install pkg-config
 brew -v install glib --universal
 brew -v install pcre --universal
@@ -188,15 +211,15 @@ brew -v install readline
 
 *Option 2: Using Macports*
 
-If you prefer using Macports, get it from <https://www.macports.org/>. After installing Macports, it is necessary to restart the computer. Next, an update of Macports is necessary.
+If you prefer using Macports, get it from https://www.macports.org/. After installing Macports, it is necessary to restart the computer. Next, an update of Macports is necessary.
 
-``` sh
+```{sh, eval = FALSE}
 sudo port -v selfupdate
 ```
 
 Now we can install the libraries rcqp will require. Again, from the terminal.
 
-``` sh
+```{sh, eval = FALSE}
 sudo port install glib2
 sudo port install pkgconfig
 sudo port install pcre
@@ -204,39 +227,41 @@ sudo port install pcre
 
 *Install dependencies and rcqp*
 
-Once the system requirements are there, the next steps can be done from R. Before installing rcqp, and then polmineR, we install a few packages. In the R console:
+Once the system requirements are there, the next steps can be done from R.  Before installing rcqp, and then polmineR, we install a few packages. In the R console:
 
-``` r
+```{r, eval = FALSE}
 install.packages(pkgs = c("RUnit", "devtools", "plyr", "tm"))
 ```
 
 Now rcqp can be installed, and then polmineR:
 
-``` r
+```{r, eval = FALSE}
 install.packages("rcqp")
 install.packages("polmineR")
 ```
 
 If you like to work with the development version, that can be installed from GitHub.
 
-``` r
+```{r, eval = FALSE}
 devtools::install_github("PolMine/polmineR", ref = "dev")
 ```
+
 
 ### Linux
 
 The pcre, glib and pkg-config libraries can be installed using apt-get.
 
-``` sh
+```{sh,  eval = FALSE}
 sudo apt-get install libglib2.0-dev
 sudo apt-get install libssl-dev
 sudo apt-get install libcurl4-openssl-dev
-```
+```	
 
 The system requirements will now be fulfilled. From R, install dependencies for rcqp/polmineR first, and then rcqp and polmineR.
 
-``` r
+```{r, eval = FALSE}
 install.packages("RUnit", "devtools", "plyr", "tm")
 install.packages("rcqp")
 install.packages("polmineR")
 ```
+
