--- a/README.Rmd
+++ b/README.Rmd
@@ -172,15 +172,56 @@ dim(tdm)
 The following instructions assume that you have installed R. If not, install it from[CRAN](https://cran.r-project.org/bin/windows/base/). An installation of [RStudio](https://www.rstudio.com/products/rstudio/download/#download) is highly recommended.
 
 
+#### Windows (64 bit)
+
+For 64bit Windows, an interface included in the package polmineR.Rcpp is offered. It can be installed from the R package repository on the Webserver of the PolMine project as follows.
+
+```{r}
+install.packages(
+  "polmineR.Rcpp",
+  repos = "http://polmine.sowi.uni-due.de/packages",
+  type = "win.binary"
+  )
+```
+
+Now the official CRAN version of polmineR can be installed.
+
+```{r}
+install.packages("polmineR")
+```
+
+To install the most recent development version that is hosted in a GitHub repository, use the convenient installation mechanism offered by the devtools package.
+
+```{r}
+install.packages("devtools")
+devtools::install_github("PolMine/polmineR", ref = "dev")
+```
+
+To have access to the syntax of CQP when forming queries, an installation of the CWB needs to be on your system. The install.cwb-function of polmineR will download the CWB binaries and puts it into a subfolder of the polmineR package.
+
+```{r}
+library(polmineR)
+install.cwb()
+```
+
+During the download and installation, you may see the following message: "Please make sure that 'D:\PATH\TO\YOUR\R\LIBRARY\polmineR\extdata\cwb\CWB\bin' is in your 'path' so you can call CWB programs from the command prompt!" Adding this path to the PATH environment variable is actually not necessary, because functions in the polmineR package will know where to look for the CWB.
+
+Finally, as a basic test whether the REUTERS corpus included in the polmineR package (for testing and demonstration purposes) is available, run:
+
+```{r, eval = FALSE}
+corpus()
+```
+
+
 #### Windows (32 bit / i386)
 
-Before installing polmineR, the package 'rcqp' needs to be installed. In turn, rcqp requires plyr, which should be installed first.
+If you work with a 32bit Windows machine, the rcqp package can be used to access CWB indexed corpora. rcqp requires plyr, which should be installed first.
 
 ```{r, eval = FALSE}
 install.packages("plyr")
 ```
 
-Windows binaries for the rcqp package are not available at CRAN, and cannot be compiled on Windows itself, but a cross-compilation can be installed from a repository of packages hosted at the server of the PolMine project:
+Windows binaries for the rcqp package are not available at CRAN. A cross-compilation can be installed from a repository of packages hosted at the server of the PolMine project:
 
 ```{r, eval = FALSE}
 install.packages("rcqp", repos = "http://polmine.sowi.uni-due.de/packages", type = "win.binary")
@@ -192,7 +233,7 @@ Before proceeding to install polmineR, we install dependencies that are not inst
 install.packages(pkgs = c("htmltools", "htmlwidgets", "magrittr", "iterators", "NLP"))
 ```
 
-The latest stable version of polmineR can now be installed from CRAN. Several other packages that polmineR depends on, or that dependencies depend on may be installed automatically. 
+The latest stable version of polmineR can now be installed from CRAN. Several other packages that polmineR depends on will be installed automatically. 
 
 ```{r, eval = FALSE}
 install.packages("polmineR")
@@ -211,22 +252,6 @@ The installation may throw warnings. There are three warnings you can ignore at 
 * The environment variable CORPUS_REGISTRY is not defined.
 * package 'rcqp' is not installed for 'arch = x64'.
 
-The configure script is for Linux/MacOS installation, its sole purpose is to pass tests for uploading the package to CRAN. As mentioned, windows binaries are not yet available for 64bit R at present, so that can be ignored. The environment variable "CORPUS_REGISTRY" can be set as follows in R:
-
-```{r, eval = FALSE}
-Sys.setenv(CORPUS_REGISTRY = "C:/PATH/TO/YOUR/REGISTRY")
-```
-
-To set the environment variable CORPUS_REGISTRY permanently, see the instructions R offer how to find the file '.Renviron' or '.Renviron.site' when calling the help for the startup process(`?Startup`).
-
-Two important notes concerning problems with the CORPUS_REGISTRY environment variable that may cause serious headaches:
-
-* The path can not be processed, if there is any whitespace in the path pointing to the registry. Whitespace may occur in the user name ("C:/Users/Donald Duck/Documents"), for instance. We do not yet know any workaround to make rcqp/CWB process whitespace. The recommendation is to create a directory at a path without whitespace to keep the registry and the indexed_corpora (a directory such as "C:/cwb").
-
-* If you keep data on another volume than your system files, your R packages etc. (eg. volume 'C:' for system files, and 'D:' for data and user files), make sure to set the working directory (`setwd()`) is set to any directory on the volume with the directory defined via CORPUS_REGISTRY. CWB/rcqp will assume that the CORPUS_REGISTRY directory is on the same volume as the current working directory (which can be identified by calling `getwd()`).
-
-Finally: polmineR if optimized for working with RStudio. It you work with 32bit R, you may have to check in the settings of RStudio that it will call 32bit R. To be sure, check the startup message.
-
 If everything works, check whether polmineR can be loaded.
 
 ```{r, eval = FALSE}
@@ -235,30 +260,27 @@ corpus() # to see corpora available at your system
 ```
 
 
-#### Windows (64 bit)
 
-```{r}
-install.packages(
-  "polmineR.Rcpp",
-  repos = "http://polmine.sowi.uni-due.de/packages",
-  type = "win.binary"
-  )
-devtools::install_github("PolMine/polmineR", ref = "dev")
-library(polmineR)
-install.cwb()
-```
+#### Setting the CORPUS_REGISTRY environment variable
 
-To test whether corpora are available:
+The environment variable "CORPUS_REGISTRY" can be set as follows in R:
 
 ```{r, eval = FALSE}
-corpus()
+Sys.setenv(CORPUS_REGISTRY = "C:/PATH/TO/YOUR/REGISTRY")
 ```
 
+To set the environment variable CORPUS_REGISTRY permanently, see the instructions R offer how to find the file '.Renviron' or '.Renviron.site' when calling the help for the startup process(`?Startup`).
+
+Two important notes concerning problems with the CORPUS_REGISTRY environment variable that may cause serious headaches on Windows machines:
+
+* The path can not be processed, if there is any whitespace in the path pointing to the registry. Whitespace may occur in the user name ("C:/Users/Donald Duck/Documents"), for instance. There is no known workaround to make rcqp/CWB process whitespace. The recommendation is to create a directory at a path without whitespace to keep the registry and the indexed_corpora (a directory such as "C:/cwb").
+
+* If you keep data on another volume than your system files, your R packages etc. (eg. volume 'C:' for system files, and 'D:' for data and user files), make sure to set the working directory (`setwd()`) is set to any directory on the volume with the directory defined via CORPUS_REGISTRY. CWB/rcqp will assume that the CORPUS_REGISTRY directory is on the same volume as the current working directory (which can be identified by calling `getwd()`).
 
 
 ### MacOS
 
-The following instructions for Mac users assume that R is installed on your system. Binaries are available from the [Homepage of the R Project](https://cran.r-project.org/bin/macosx/). An installation of RStudio is highly recommended. Obtain the Open Source License version of [RStudio Desktop](https://www.rstudio.com/products/rstudio/download/).
+The following instructions for Mac users assume that R is installed on your system. Binaries are available from the [Homepage of the R Project](https://cran.r-project.org/bin/macosx/). An installation of RStudio is highly recommended. Get the Open Source License version of [RStudio Desktop](https://www.rstudio.com/products/rstudio/download/).
 
 #### Installing 'polmineR'
 
@@ -307,7 +329,7 @@ Please make sure that you agree to the license.
 
 Second, an installation of XQuartz is required, it can be obtained from [www.xquartz.org](https://www.xquartz.org/).
 
-Third, to compile the C code in the rcqp package, there are system requirements that need to be fulfilled. Using a package manager makes things considerably easier. We recommend using 'Homebrew'. To install Homebrew, follow the instructions on the [Homebrew Homepage](https://brew.sh/index_de.html). The following commands need to be executed from a terminal window. They will install the C libraries the rcqp package relies on:
+Third, to compile the C code in the rcqp package, there are system requirements that need to be fulfilled. Using a package manager makes things considerably easier. We recommend using 'Homebrew'. To install Homebrew, follow the instructions on the [Homebrew Homepage](https://brew.sh/index_de.html). The following commands then need to be executed from a terminal window. They will install the C libraries that the rcqp package relies on:
 
 ```{sh, eval = FALSE}
 brew -v install pkg-config
@@ -315,8 +337,6 @@ brew -v install glib --universal
 brew -v install pcre --universal
 brew -v install readline
 ```
-
-If you prefer using Macports, get it from https://www.macports.org/. After installing Macports, it is necessary to restart the computer. Update Macports and install the required libraries (glib2, pkgconfig, pcre).
 
 Fourth, install dependencies of rcqp, and finally rcqp. That can be done from within R.
 
@@ -337,13 +357,15 @@ You should see a message that rcqp is the interface used, and that the REUTERS c
 
 ### Linux (Ubuntu)
 
-If you have not yet installed R, there is a good instruction at [ubuntuuser](https://wiki.ubuntuusers.de/R/). To install base R, enter in the terminal.
+#### Installing R
+
+If you have not yet installed R on your Ubuntu machine, there is a good instruction at [ubuntuuser](https://wiki.ubuntuusers.de/R/). To install base R, enter in the terminal.
 
 ```{sh}
-sudo apt-get install r-base
+sudo apt-get install r-base r-recommended
 ```
 
-Make sure that you have installed the latest version of R. The following commands will add the R repository to the package sources and run an update.
+Make sure that you have installed the latest version of R. The following commands will add the R repository to the package sources and run an update. The second line assumes that you are using Ubuntu 16.04.
 
 ```{sh}
 sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com E084DAB9
@@ -352,7 +374,11 @@ sudo apt-get update
 sudo apt-get upgrade
 ```
 
+#### Installing RStudio
+
 It is highly recommended to install [RStudio](https://www.rstudio.com/products/rstudio/download/#download), a powerful IDE for R. Output of polmineR methods is generally optimized to be displayed using RStudio facilities. If you are working on a remote server, running RStudio Server may be an interesting option to consider.
+
+#### Base Installation of polmineR
 
 The Corpus Workbench will require the pcre, glib and pkg-config libraries. They can be installed as follows. In addition libxml2 is installed, a dependency of the R package xml2 that is used for manipulating html output.
 
@@ -362,12 +388,12 @@ sudo apt-get install libxml2-dev
 sudo apt-get install libprotobuf-dev
 ```
 
-The system requirements will now be fulfilled. From R, install dependencies for rcqp/polmineR first, and then rcqp and polmineR. It is recommended to install polmineR with all suggested dependencies, which may take a while.
+The system requirements will now be fulfilled. From R, install dependencies for rcqp/polmineR first, and then rcqp and polmineR.
 
 ```{r, eval = FALSE}
 install.packages(pkgs = c("RUnit", "devtools", "plyr", "tm"))
 install.packages("rcqp")
-install.packages("polmineR", dependencies = c("Depends", "Imports", "Suggests"))
+install.packages("polmineR")
 ```
 
 Use devtools to install the development version of polmineR from GitHub.
@@ -377,10 +403,33 @@ install.packages("devtools")
 devtools::install_github("PolMine/polmineR", ref = "dev")
 ```
 
-Finally, you may want to install packaged corpora to run examples in the vignette, and the manual packages.
+You may want to install packaged corpora to run examples in the vignette, and the man packages.
 
 ```{r, eval = FALSE}
 library(polmineR)
 install.corpus("polmineR.sampleCorpus")
-install.corpus("EUROPARL-EN")
+install.corpus("europarl.en")
+```
+
+
+#### polmineR - Full installation
+
+To have access to all package functions and to run all package tests, the installation of further system requirements and packages is required. The xlsx dependency requires that rJava is installed and configured for R. That is done on the shell:
+
+```{sh, eval = FALSE}
+sudo apt-get install openjdk-8-jre
+sudo R CMD javareconf
+```
+
+To run package tests including (re-)building the manual and vignettes, a working installation of Latex is required, too. Be aware that this may be a time-consuming operation.
+
+```{sh, eval = FALSE}
+sudo apt-get install texlive-full texlive-xetex 
+```
+
+Now install the remaining packages from within R.
+
+```{r}
+devtools::install_github("PolMine/polmineR.Rcpp")
+install.packages(pkgs = c("rJava", "xlsx", "tidytext"))
 ```
